--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -32,13 +32,13 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Mesh Debug]
-Pos=60,60
+Pos=68,67
 Size=357,195
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0xFA06BC56 Pos=1055,153 Size=1280,696 Split=X SelectedTab=0x995B0CF8
-  DockNode    ID=0x00000001 Parent=0xFA06BC56 SizeRef=985,696 CentralNode=1 SelectedTab=0x995B0CF8
+DockSpace     ID=0xFA06BC56 Pos=902,172 Size=1280,696 Split=X SelectedTab=0x995B0CF8
+  DockNode    ID=0x00000001 Parent=0xFA06BC56 SizeRef=985,696 CentralNode=1 HiddenTabBar=1 SelectedTab=0x995B0CF8
   DockNode    ID=0x00000002 Parent=0xFA06BC56 SizeRef=293,696 Split=Y SelectedTab=0x16545DDD
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=214,345 SelectedTab=0x16545DDD
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=214,349 SelectedTab=0xC0BA51F5
