--- a/UngineEditor/assets/models/m1911/imgui.ini
+++ b/UngineEditor/assets/models/m1911/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=2560,1387
+Size=1600,900
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,34 +9,34 @@ Size=400,400
 Collapsed=0
 
 [Window][Renderer]
-ViewportPos=2379,669
+ViewportPos=1657,103
 ViewportId=0x08EFC3CA
-Size=275,129
+Size=275,190
 Collapsed=0
 
 [Window][Model]
-ViewportPos=921,330
-ViewportId=0x16545DDD
-Size=1305,788
+Pos=0,305
+Size=347,595
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Environment]
-ViewportPos=184,387
-ViewportId=0xC0BA51F5
-Size=608,416
+Pos=0,24
+Size=347,279
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Viewport]
-Pos=0,24
-Size=1950,1363
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Mesh Debug]
-Pos=1952,24
-Size=608,1363
+Pos=349,24
+Size=1251,876
 Collapsed=0
 DockId=0x00000002,0
+
+[Window][Mesh Debug]
+ViewportPos=1727,184
+ViewportId=0x68562EF4
+Size=285,147
+Collapsed=0
 
 [Window][ImGui Demo]
 ViewportPos=276,66
@@ -45,7 +45,9 @@ Size=1923,1168
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0xFA06BC56 Pos=2560,47 Size=2560,1363 Split=X SelectedTab=0x995B0CF8
-  DockNode  ID=0x00000001 Parent=0xFA06BC56 SizeRef=1950,696 CentralNode=1 SelectedTab=0x995B0CF8
-  DockNode  ID=0x00000002 Parent=0xFA06BC56 SizeRef=608,696 SelectedTab=0x68562EF4
+DockSpace     ID=0xFA06BC56 Window=0x4647B76E Pos=73,126 Size=1600,876 Split=X
+  DockNode    ID=0x00000001 Parent=0xFA06BC56 SizeRef=347,696 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=299,435 Selected=0xC0BA51F5
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=299,926 Selected=0x16545DDD
+  DockNode    ID=0x00000002 Parent=0xFA06BC56 SizeRef=2211,696 CentralNode=1 Selected=0x995B0CF8
 
