--- a/UngineEditor/imgui.ini
+++ b/UngineEditor/imgui.ini
@@ -9,9 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Renderer]
-ViewportPos=1991,236
-ViewportId=0x08EFC3CA
-Size=275,129
+Pos=1124,46
+Size=275,190
 Collapsed=0
 
 [Window][Model]
@@ -33,8 +32,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Mesh Debug]
-ViewportPos=313,1363
-ViewportId=0x68562EF4
+Pos=836,142
 Size=285,147
 Collapsed=0
 
@@ -45,9 +43,9 @@ Size=1923,1168
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0xFA06BC56 Pos=858,272 Size=1600,876 Split=X SelectedTab=0x995B0CF8
-  DockNode    ID=0x00000001 Parent=0xFA06BC56 SizeRef=347,696 Split=Y SelectedTab=0xC0BA51F5
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=299,435 SelectedTab=0xC0BA51F5
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=299,926 SelectedTab=0x16545DDD
-  DockNode    ID=0x00000002 Parent=0xFA06BC56 SizeRef=2211,696 CentralNode=1 SelectedTab=0x995B0CF8
+DockSpace     ID=0xFA06BC56 Window=0x4647B76E Pos=421,117 Size=1600,876 Split=X
+  DockNode    ID=0x00000001 Parent=0xFA06BC56 SizeRef=347,696 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=299,435 Selected=0xC0BA51F5
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=299,926 Selected=0x16545DDD
+  DockNode    ID=0x00000002 Parent=0xFA06BC56 SizeRef=2211,696 CentralNode=1 Selected=0x995B0CF8
 
