--- a/Ungine/Ungine.vcxproj.filters
+++ b/Ungine/Ungine.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClInclude Include="src\Ungine\Core\Application.h">
       <Filter>Ungine\Core</Filter>
     </ClInclude>
+    <ClInclude Include="src\Ungine\Core\Assert.h">
+      <Filter>Ungine\Core</Filter>
+    </ClInclude>
     <ClInclude Include="src\Ungine\Core\Base.h">
       <Filter>Ungine\Core</Filter>
     </ClInclude>
@@ -82,6 +85,9 @@
     <ClInclude Include="src\Ungine\ImGui\ImGuiLayer.h">
       <Filter>Ungine\ImGui</Filter>
     </ClInclude>
+    <ClInclude Include="src\Ungine\ImGui\ImGuizmo.h">
+      <Filter>Ungine\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLBuffer.h">
       <Filter>Ungine\Platform\OpenGL</Filter>
     </ClInclude>
@@ -95,6 +101,9 @@
       <Filter>Ungine\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLTexture.h">
+      <Filter>Ungine\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLVertexArray.h">
       <Filter>Ungine\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Ungine\Platform\Windows\WindowsInput.h">
@@ -136,9 +145,12 @@
     <ClInclude Include="src\Ungine\Renderer\Texture.h">
       <Filter>Ungine\Renderer</Filter>
     </ClInclude>
+    <ClInclude Include="src\Ungine\Renderer\VertexArray.h">
+      <Filter>Ungine\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Upch.h" />
-    <ClInclude Include="src\Ungine\Renderer\VertexArray.h" />
-    <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLVertexArray.h" />
+    <ClInclude Include="src\Ungine\Renderer\RenderPass.h" />
+    <ClInclude Include="src\Ungine\Platform\OpenGL\OpenGLRenderPass.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Ungine\Core\Application.cpp">
@@ -168,6 +180,9 @@
     <ClCompile Include="src\Ungine\ImGui\ImGuiLayer.cpp">
       <Filter>Ungine\ImGui</Filter>
     </ClCompile>
+    <ClCompile Include="src\Ungine\ImGui\ImGuizmo.cpp">
+      <Filter>Ungine\ImGui</Filter>
+    </ClCompile>
     <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLBuffer.cpp">
       <Filter>Ungine\Platform\OpenGL</Filter>
     </ClCompile>
@@ -184,6 +199,9 @@
       <Filter>Ungine\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLTexture.cpp">
+      <Filter>Ungine\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLVertexArray.cpp">
       <Filter>Ungine\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Ungine\Platform\Windows\WindowsInput.cpp">
@@ -219,11 +237,14 @@
     <ClCompile Include="src\Ungine\Renderer\Texture.cpp">
       <Filter>Ungine\Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="src\Ungine\Renderer\VertexArray.cpp">
+      <Filter>Ungine\Renderer</Filter>
+    </ClCompile>
     <ClCompile Include="src\Ungine\Vendor\stb_image.cpp">
       <Filter>Ungine\Vendor</Filter>
     </ClCompile>
     <ClCompile Include="src\Upch.cpp" />
-    <ClCompile Include="src\Ungine\Renderer\VertexArray.cpp" />
-    <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLVertexArray.cpp" />
+    <ClCompile Include="src\Ungine\Renderer\RenderPass.cpp" />
+    <ClCompile Include="src\Ungine\Platform\OpenGL\OpenGLRenderPass.cpp" />
   </ItemGroup>
 </Project>
