--- a/UngineEditor/assets/models/m1911/imgui.ini
+++ b/UngineEditor/assets/models/m1911/imgui.ini
@@ -1,42 +1,41 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1600,900
+Size=2560,1387
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+Pos=55,90
 Size=400,400
 Collapsed=0
 
 [Window][Renderer]
-ViewportPos=1657,103
-ViewportId=0x08EFC3CA
-Size=275,190
+Pos=2047,1141
+Size=285,134
 Collapsed=0
 
 [Window][Model]
-Pos=0,305
-Size=347,595
+Pos=1772,24
+Size=788,577
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000001,0
 
 [Window][Environment]
-Pos=0,24
-Size=347,279
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Viewport]
-Pos=349,24
-Size=1251,876
+Pos=1772,603
+Size=788,784
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][Mesh Debug]
-ViewportPos=1727,184
-ViewportId=0x68562EF4
-Size=285,147
+[Window][Viewport]
+Pos=421,24
+Size=1349,1363
 Collapsed=0
+DockId=0x00000003,0
+
+[Window][Mesh Debug]
+Pos=2055,471
+Size=505,916
+Collapsed=0
+DockId=0x00000002,1
 
 [Window][ImGui Demo]
 ViewportPos=276,66
@@ -44,10 +43,29 @@ ViewportId=0x080FC883
 Size=1923,1168
 Collapsed=0
 
+[Window][Mesh Hierarchy]
+Pos=0,24
+Size=419,1363
+Collapsed=0
+DockId=0x00000005,1
+
+[Window][Scene Hierarchy]
+Pos=0,24
+Size=419,1363
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Properties]
+Pos=107,1086
+Size=188,127
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0xFA06BC56 Window=0x4647B76E Pos=73,126 Size=1600,876 Split=X
-  DockNode    ID=0x00000001 Parent=0xFA06BC56 SizeRef=347,696 Split=Y
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=299,435 Selected=0xC0BA51F5
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=299,926 Selected=0x16545DDD
-  DockNode    ID=0x00000002 Parent=0xFA06BC56 SizeRef=2211,696 CentralNode=1 Selected=0x995B0CF8
+DockSpace       ID=0xFA06BC56 Window=0x4647B76E Pos=0,47 Size=2560,1363 Split=X
+  DockNode      ID=0x00000005 Parent=0xFA06BC56 SizeRef=419,1363 Selected=0x9A68760C
+  DockNode      ID=0x00000006 Parent=0xFA06BC56 SizeRef=2139,1363 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1349,876 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=788,876 Split=Y Selected=0x16545DDD
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=705,577 Selected=0x16545DDD
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=705,784 Selected=0xC0BA51F5
 
