--- a/UngineEditor/imgui.ini
+++ b/UngineEditor/imgui.ini
@@ -9,33 +9,33 @@ Size=400,400
 Collapsed=0
 
 [Window][Renderer]
-Pos=49,1032
+Pos=38,1158
 Size=285,134
 Collapsed=0
 
 [Window][Model]
-Pos=2148,24
-Size=412,687
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Environment]
-Pos=2148,713
-Size=412,674
+Pos=1979,24
+Size=581,683
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][Viewport]
-Pos=421,24
-Size=1725,1363
+[Window][Environment]
+Pos=1979,709
+Size=581,678
 Collapsed=0
 DockId=0x00000003,0
+
+[Window][Viewport]
+Pos=460,24
+Size=1517,1363
+Collapsed=0
+DockId=0x00000005,0
 
 [Window][Mesh Debug]
 Pos=2055,471
 Size=505,916
 Collapsed=0
-DockId=0x00000002,1
+DockId=0xFA06BC56,1
 
 [Window][ImGui Demo]
 ViewportPos=276,66
@@ -47,28 +47,28 @@ Collapsed=0
 Pos=0,24
 Size=419,1363
 Collapsed=0
-DockId=0x00000005,1
+DockId=0xFA06BC56,1
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=419,847
+Size=458,879
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
-Pos=0,873
-Size=419,514
+Pos=0,905
+Size=458,482
 Collapsed=0
 DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace       ID=0xFA06BC56 Window=0x4647B76E Pos=0,47 Size=2560,1363 Split=X
-  DockNode      ID=0x00000005 Parent=0xFA06BC56 SizeRef=419,1363 Split=Y Selected=0x9A68760C
-    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=419,847 Selected=0x9A68760C
-    DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=419,514 Selected=0xC89E3217
-  DockNode      ID=0x00000006 Parent=0xFA06BC56 SizeRef=2139,1363 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=1189,876 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=412,876 Split=Y Selected=0x16545DDD
-      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=705,687 Selected=0x16545DDD
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=705,674 Selected=0xC0BA51F5
+DockSpace       ID=0xFA06BC56 Window=0x4647B76E Pos=0,47 Size=2560,1363 Split=X Selected=0x995B0CF8
+  DockNode      ID=0x00000006 Parent=0xFA06BC56 SizeRef=1235,876 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=458,1363 Split=Y Selected=0x9A68760C
+      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=512,879 Selected=0x9A68760C
+      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=512,482 Selected=0xC89E3217
+    DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=775,1363 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+  DockNode      ID=0x00000001 Parent=0xFA06BC56 SizeRef=363,876 Split=Y Selected=0x16545DDD
+    DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=520,683 Selected=0x16545DDD
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=520,678 Selected=0xC0BA51F5
 
