--- a/UngineEditor/imgui.ini
+++ b/UngineEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1600,900
+Size=2560,1361
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,27 +9,28 @@ Size=400,400
 Collapsed=0
 
 [Window][Renderer]
-Pos=1053,18
-Size=269,121
+ViewportPos=2541,787
+ViewportId=0x08EFC3CA
+Size=267,137
 Collapsed=0
 
 [Window][Model]
-Pos=1115,24
-Size=485,435
+Pos=1970,24
+Size=590,480
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000B,0
 
 [Window][Environment]
-Pos=1115,461
-Size=485,439
+Pos=1970,929
+Size=590,432
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=345,24
-Size=768,876
+Pos=486,64
+Size=1482,1297
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x0000000A,0
 
 [Window][Mesh Debug]
 Pos=2055,471
@@ -50,33 +51,53 @@ Collapsed=0
 DockId=0xFA06BC56,1
 
 [Window][Scene Hierarchy]
-Pos=0,81
-Size=343,197
+Pos=0,24
+Size=484,669
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000007,0
 
 [Window][Properties]
-Pos=0,280
-Size=343,620
+Pos=0,695
+Size=484,666
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000008,0
+
+[Window][Dear ImGui Demo]
+ViewportPos=3402,592
+ViewportId=0xE927CF2F
+Size=710,397
+Collapsed=0
 
 [Window][Toolbar]
-Pos=0,24
-Size=343,55
+Pos=486,24
+Size=1482,38
 Collapsed=0
 DockId=0x00000009,0
 
+[Window][Script Engine Debug]
+Pos=1970,506
+Size=590,421
+Collapsed=0
+DockId=0x00000003,1
+
+[Window][Materials]
+Pos=1970,506
+Size=590,421
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
-DockSpace       ID=0xFA06BC56 Window=0x4647B76E Pos=759,97 Size=1600,876 Split=X Selected=0x995B0CF8
-  DockNode      ID=0x00000004 Parent=0xFA06BC56 SizeRef=549,1363 Split=Y Selected=0xC89E3217
-    DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=456,254 Split=Y Selected=0x9A68760C
-      DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=412,55 Selected=0x507852CA
-      DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=412,197 Selected=0x9A68760C
-    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=456,620 Selected=0xC89E3217
-  DockNode      ID=0x00000005 Parent=0xFA06BC56 SizeRef=2009,1363 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=1522,1363 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=485,1363 Split=Y Selected=0xC0BA51F5
-      DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=419,435 Selected=0x16545DDD
-      DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=419,439 Selected=0xC0BA51F5
+DockSpace         ID=0xFA06BC56 Window=0x4647B76E Pos=0,53 Size=2560,1337 Split=X Selected=0x995B0CF8
+  DockNode        ID=0x00000005 Parent=0xFA06BC56 SizeRef=484,1363 Split=Y Selected=0x9A68760C
+    DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=594,682 Selected=0x9A68760C
+    DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=594,679 Selected=0xC89E3217
+  DockNode        ID=0x00000006 Parent=0xFA06BC56 SizeRef=2074,1363 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000006 SizeRef=1482,1363 Split=Y Selected=0x995B0CF8
+      DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=1687,38 HiddenTabBar=1 Selected=0x507852CA
+      DockNode    ID=0x0000000A Parent=0x00000001 SizeRef=1687,1297 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+    DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=590,1363 Split=Y Selected=0xC0BA51F5
+      DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=610,489 Selected=0x16545DDD
+      DockNode    ID=0x0000000C Parent=0x00000002 SizeRef=610,872 Split=Y Selected=0x2196E357
+        DockNode  ID=0x00000003 Parent=0x0000000C SizeRef=457,429 Selected=0x2196E357
+        DockNode  ID=0x00000004 Parent=0x0000000C SizeRef=457,441 Selected=0xC0BA51F5
 
