--- a/UngineEditor/imgui.ini
+++ b/UngineEditor/imgui.ini
@@ -1,34 +1,33 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=2560,1361
+Size=2560,1387
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=55,90
+Pos=227,66
 Size=400,400
 Collapsed=0
 
 [Window][Renderer]
-ViewportPos=2541,787
-ViewportId=0x08EFC3CA
+Pos=2004,1184
 Size=267,137
 Collapsed=0
 
 [Window][Model]
-Pos=1970,24
-Size=590,480
+Pos=0,432
+Size=449,386
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000E,1
 
 [Window][Environment]
-Pos=1970,929
-Size=590,432
+Pos=1954,708
+Size=606,679
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=486,64
-Size=1482,1297
+Pos=451,65
+Size=1501,1322
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -52,13 +51,13 @@ DockId=0xFA06BC56,1
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=484,669
+Size=449,406
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000D,0
 
 [Window][Properties]
-Pos=0,695
-Size=484,666
+Pos=0,820
+Size=449,567
 Collapsed=0
 DockId=0x00000008,0
 
@@ -69,35 +68,35 @@ Size=710,397
 Collapsed=0
 
 [Window][Toolbar]
-Pos=486,24
-Size=1482,38
+Pos=451,24
+Size=1501,39
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Script Engine Debug]
-Pos=1970,506
-Size=590,421
-Collapsed=0
-DockId=0x00000003,1
-
-[Window][Materials]
-Pos=1970,506
-Size=590,421
+Pos=1954,24
+Size=606,682
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Materials]
+Pos=0,432
+Size=449,386
+Collapsed=0
+DockId=0x0000000E,0
+
 [Docking][Data]
-DockSpace         ID=0xFA06BC56 Window=0x4647B76E Pos=0,53 Size=2560,1337 Split=X Selected=0x995B0CF8
-  DockNode        ID=0x00000005 Parent=0xFA06BC56 SizeRef=484,1363 Split=Y Selected=0x9A68760C
-    DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=594,682 Selected=0x9A68760C
-    DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=594,679 Selected=0xC89E3217
-  DockNode        ID=0x00000006 Parent=0xFA06BC56 SizeRef=2074,1363 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000006 SizeRef=1482,1363 Split=Y Selected=0x995B0CF8
-      DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=1687,38 HiddenTabBar=1 Selected=0x507852CA
-      DockNode    ID=0x0000000A Parent=0x00000001 SizeRef=1687,1297 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-    DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=590,1363 Split=Y Selected=0xC0BA51F5
-      DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=610,489 Selected=0x16545DDD
-      DockNode    ID=0x0000000C Parent=0x00000002 SizeRef=610,872 Split=Y Selected=0x2196E357
-        DockNode  ID=0x00000003 Parent=0x0000000C SizeRef=457,429 Selected=0x2196E357
-        DockNode  ID=0x00000004 Parent=0x0000000C SizeRef=457,441 Selected=0xC0BA51F5
+DockSpace       ID=0xFA06BC56 Window=0x4647B76E Pos=0,47 Size=2560,1363 Split=X Selected=0x995B0CF8
+  DockNode      ID=0x00000005 Parent=0xFA06BC56 SizeRef=449,1363 Split=Y Selected=0x9A68760C
+    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=594,794 Split=Y Selected=0x9A68760C
+      DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=450,406 Selected=0x9A68760C
+      DockNode  ID=0x0000000E Parent=0x00000007 SizeRef=450,386 Selected=0x19E69416
+    DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=594,567 Selected=0xC89E3217
+  DockNode      ID=0x00000006 Parent=0xFA06BC56 SizeRef=2109,1363 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=1501,1363 Split=Y Selected=0x995B0CF8
+      DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=1687,39 HiddenTabBar=1 Selected=0x507852CA
+      DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=1687,1322 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=606,1363 Split=Y Selected=0x2196E357
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=559,682 Selected=0x2196E357
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=559,679 Selected=0xC0BA51F5
 
